Fixed overflow bug. Added scroll.

--- a/src/components/PinCardsList/PinCardsList.scss
+++ b/src/components/PinCardsList/PinCardsList.scss
@@ -2,6 +2,9 @@
   width: 20%;
   float: right;
   height: 100%;
+  max-height: 100%;
+  overflow-y: scroll;
+  overflow-z: hidden;
 }
 .fullScreen{
   display: none
